--- a/shiggycord.css
+++ b/shiggycord.css
@@ -1,4 +1,4 @@
-[class*=emoji]:not(.emojiColorFill-3g46kH), .emojiSpriteImage-3ykvhZ, .image-3tDi44 {
+.image-3tDi44, .emojiSpriteImage-3ykvhZ, .diversityEmojiItemImage-1pfGqI, .emoji {
   background-image: none !important;
   content: url("https://cdn.discordapp.com/emojis/1024751291504791654.gif?size=40") !important;;
 }
