--- a/shiggycord.css
+++ b/shiggycord.css
@@ -1,4 +1,4 @@
-.image-3tDi44, .emojiSpriteImage-3ykvhZ, .diversityEmojiItemImage-1pfGqI, .emoji {
+.image-3tDi44, .emojiSpriteImage-3ykvhZ, .diversityEmojiItemImage-1pfGqI, .emoji, .emojiButton-3FRTuj {
   background-image: none !important;
-  content: url("https://cdn.discordapp.com/emojis/1024751291504791654.gif?size=40") !important;;
+  content: url("https://cdn.discordapp.com/emojis/1024751291504791654.gif?size=40") !important;
 }
