--- a/make-bios-long.css
+++ b/make-bios-long.css
@@ -1,4 +1,4 @@
 /* Long bios for users */
-.defaultColor-1EVLSt.lineClamp2Plus-2SCQmH.text-sm-normal-AEQz4v {
+[class*=userPopoutOverlayBackground-] [class*=lineClamp2Plus-] {
   -webkit-line-clamp: 190 !important;
 }
