--- a/make-bios-long.css
+++ b/make-bios-long.css
@@ -1,5 +1,3 @@
-/* Long bios for users */
-[class*=userPopoutOverlayBackground-] [class*=lineClamp2Plus-],
-[class*=userProfileModalOverlayBackground-] [class*=lineClamp2Plus-]{
-  -webkit-line-clamp: 190 !important;
+[style="-webkit-line-clamp: 6;"] {
+    -webkit-line-clamp: unset !important;
 }
